[gd_scene load_steps=12 format=3 uid="uid://cqlvtcq3dmowi"]

[ext_resource type="Script" path="res://scenes/script/Start1.gd" id="1_snw8m"]
[ext_resource type="Texture2D" uid="uid://sg80hikued5m" path="res://assets/background/start1.png" id="1_vgrhe"]
[ext_resource type="Texture2D" uid="uid://cxjpjrs6u0w5m" path="res://assets/ui/Edinnu_UI_asset_pack/Edinnu_UI_asset_pack/Dialogue_plates/Plate (25).png" id="3_5jybv"]
[ext_resource type="Texture2D" uid="uid://f0c8f087d4u7" path="res://assets/ui/Fantasy Minimal Pixel Art GUI by eta-commercial-free/UI/RightArrowButton_7x10.png" id="4_ltxm2"]
[ext_resource type="Texture2D" uid="uid://ipnwnngm1f0h" path="res://assets/ui/Fantasy Minimal Pixel Art GUI by eta-commercial-free/UI/BlackBigCircleBoxWithBorder_27x27.png" id="5_14dvt"]
[ext_resource type="Texture2D" uid="uid://dgkriodcsswqj" path="res://assets/ui/Edinnu_UI_asset_pack/Edinnu_UI_asset_pack/Dialogue_plates/Plate (13).png" id="6_0ndgw"]
[ext_resource type="FontFile" uid="uid://2snsq37rh6lp" path="res://assets/font/ModernDOS8x16.ttf" id="7_ume8p"]

[sub_resource type="Animation" id="Animation_2viyu"]
resource_name = "fade_in"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.368627), Color(1, 1, 1, 0.666667), Color(1, 1, 1, 0.784314)]
}

[sub_resource type="Animation" id="Animation_mxtn4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jhuyc"]
resource_name = "fade_out"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.784314), Color(1, 1, 1, 0.713726), Color(1, 1, 1, 0.529412), Color(1, 1, 1, 0.360784), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_67roe"]
_data = {
"RESET": SubResource("Animation_mxtn4"),
"fade_in": SubResource("Animation_2viyu"),
"fade_out": SubResource("Animation_jhuyc")
}

[node name="Start1" type="Node2D"]
script = ExtResource("1_snw8m")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0.784314)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -15.0
offset_right = 2361.0
offset_bottom = 1351.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_vgrhe")
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_67roe")
}

[node name="DialogBox" type="NinePatchRect" parent="."]
visibility_layer = 2
offset_left = 222.0
offset_top = 486.0
offset_right = 945.0
offset_bottom = 605.0
texture = ExtResource("3_5jybv")

[node name="NextButton" type="Button" parent="DialogBox"]
self_modulate = Color(1, 1, 1, 0.0705882)
layout_mode = 0
offset_left = 678.0
offset_top = 75.0
offset_right = 692.0
offset_bottom = 93.0

[node name="NinePatchRect" type="NinePatchRect" parent="DialogBox/NextButton"]
visibility_layer = 2
z_index = 1
layout_mode = 0
offset_left = 1.0
offset_right = 13.0
offset_bottom = 18.0
texture = ExtResource("4_ltxm2")

[node name="NinePatchRect2" type="NinePatchRect" parent="DialogBox/NextButton"]
layout_mode = 0
offset_left = -14.0
offset_top = -11.0
offset_right = 26.0
offset_bottom = 29.0
texture = ExtResource("5_14dvt")

[node name="CharacterBox" type="NinePatchRect" parent="DialogBox"]
layout_mode = 0
offset_left = 6.0
offset_top = -64.0
offset_right = 145.0
offset_bottom = -7.0
texture = ExtResource("6_0ndgw")

[node name="LabelCharacter" type="Label" parent="DialogBox/CharacterBox"]
layout_mode = 0
offset_left = 17.0
offset_top = 21.0
offset_right = 122.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_ume8p")
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelDialog" type="Label" parent="DialogBox"]
layout_mode = 0
offset_left = 52.0
offset_top = 22.0
offset_right = 645.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_ume8p")
theme_override_font_sizes/font_size = 21
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="DialogBox/NextButton" to="." method="_on_next_button_pressed"]
